# conda-forge-feedstock-check-solvable

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pixi.toml  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py
.github/workflows/: tests.yml  tests_mamba.yml
conda_forge_feedstock_check_solvable/: __init__.py  check_solvable.py  mamba_solver.py  mamba_utils.py  rattler_build.py  rattler_solver.py  utils.py  virtual_packages.py
tests/: conftest.py  test_check_solvable.py  test_mamba_solvable.py  test_rattler_solvable.py  test_solvers.py  test_utils.py  test_virtual_packages.py
tests/guiqwt-feedstock/.ci_support/: linux_64_numpy1.22python3.8.____cpython.yaml  linux_64_numpy2.0python3.10.____cpython.yaml  linux_64_numpy2.0python3.11.____cpython.yaml  linux_64_numpy2.0python3.12.____cpython.yaml  linux_64_numpy2.0python3.9.____cpython.yaml  linux_aarch64_numpy1.22python3.8.____cpython.yaml  linux_aarch64_numpy2.0python3.10.____cpython.yaml  linux_aarch64_numpy2.0python3.11.____cpython.yaml  linux_aarch64_numpy2.0python3.12.____cpython.yaml  linux_aarch64_numpy2.0python3.9.____cpython.yaml  osx_64_numpy1.22python3.8.____cpython.yaml  osx_64_numpy2.0python3.10.____cpython.yaml  osx_64_numpy2.0python3.11.____cpython.yaml  osx_64_numpy2.0python3.12.____cpython.yaml  osx_64_numpy2.0python3.9.____cpython.yaml  osx_arm64_numpy1.22python3.8.____cpython.yaml  osx_arm64_numpy2.0python3.10.____cpython.yaml  osx_arm64_numpy2.0python3.11.____cpython.yaml  osx_arm64_numpy2.0python3.12.____cpython.yaml  osx_arm64_numpy2.0python3.9.____cpython.yaml  (+5 more)
(+32 files in other folders)
